k8s/infra/overlays/local/kafka-ui/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kafka-ui-ingress
  namespace: kafka-ui
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true" # Redirect to SSL
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    cert-manager.io/cluster-issuer: "self-signed-issuer" # Use cert-manager for TLS
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - kafka-ui.k8s.local
      secretName: k8s-local-cert-secret # This is the cert-manager secret for TLS
  rules:
    - host: kafka-ui.k8s.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kafka-ui
                port:
                  number: 80
